feat: Add recurring transactions and budgets features
- Add recurring_transactions table migration
- Add RecurringTransactionModel, Repository, Provider
- Add recurring transactions list and add sheet UI
- Add budgets table migration
- Add BudgetModel, Repository, Provider
- Add budgets list and add sheet UI
- Update default theme to Midnight Fintech
- Update app name to Wallet Elite
- Add localization keys for new features

--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -364,5 +364,54 @@
     "noExpenseData": "Gider verisi yok",
     "spendingPatterns": "Harcama Kalıpları",
     "apply": "Uygula",
-    "reset": "Sıfırla"
+    "reset": "Sıfırla",
+    "recurringTransactions": "Tekrarlayan İşlemler",
+    "addRecurringTransaction": "Tekrarlayan İşlem Ekle",
+    "editRecurringTransaction": "Tekrarlayan İşlemi Düzenle",
+    "deleteRecurringTransaction": "Tekrarlayan İşlemi Sil",
+    "deleteRecurringConfirmation": "Bu tekrarlayan işlemi silmek istediğinize emin misiniz?",
+    "noRecurringTransactions": "Henüz tekrarlayan işlem yok",
+    "addRecurringTransactionHint": "Maaş, fatura gibi düzenli işlemler ekleyerek zaman kazanın",
+    "frequency": "Tekrar Sıklığı",
+    "yearly": "Yıllık",
+    "dayOfMonth": "Ayın Günü",
+    "dayOfWeek": "Haftanın Günü",
+    "nextExecution": "Sonraki Çalışma",
+    "active": "Aktif",
+    "inactive": "Pasif",
+    "optional": "Opsiyonel",
+    "monday": "Pazartesi",
+    "tuesday": "Salı",
+    "wednesday": "Çarşamba",
+    "thursday": "Perşembe",
+    "friday": "Cuma",
+    "saturday": "Cumartesi",
+    "sunday": "Pazar",
+    "description": "Açıklama",
+    "descriptionHint": "örn: Netflix aboneliği",
+    "selectAccount": "Hesap Seç",
+    "selectCategory": "Kategori Seç",
+    "pleaseEnterAmount": "Lütfen tutar giriniz",
+    "pleaseEnterValidAmount": "Geçerli bir tutar giriniz",
+    "pleaseSelectAccount": "Lütfen hesap seçiniz",
+    "budgets": "Bütçeler",
+    "budget": "Bütçe",
+    "addBudget": "Bütçe Ekle",
+    "editBudget": "Bütçeyi Düzenle",
+    "deleteBudget": "Bütçeyi Sil",
+    "deleteBudgetConfirmation": "Bu bütçeyi silmek istediğinizden emin misiniz?",
+    "noBudgets": "Henüz bütçe yok",
+    "addBudgetHint": "Harcamalarınızı kontrol altında tutmak için bütçe oluşturun",
+    "budgetName": "Bütçe Adı",
+    "budgetNameHint": "örn: Aylık Yemek Bütçesi",
+    "pleaseEnterBudgetName": "Lütfen bütçe adı giriniz",
+    "budgetAmount": "Bütçe Limiti",
+    "budgetPeriod": "Bütçe Periyodu",
+    "budgetStartDay": "Dönem Başlangıç Günü",
+    "allExpenses": "Tüm Harcamalar",
+    "notifyAtPercent": "Uyarı Yüzdesi",
+    "notifyWhenExceeded": "Aşıldığında bildir",
+    "used": "kullanıldı",
+    "remaining": "Kalan",
+    "exceeded": "aşıldı"
 }
