--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -367,5 +367,54 @@
     "noExpenseData": "No expense data",
     "spendingPatterns": "Spending Patterns",
     "apply": "Apply",
-    "reset": "Reset"
+    "reset": "Reset",
+    "recurringTransactions": "Recurring Transactions",
+    "addRecurringTransaction": "Add Recurring Transaction",
+    "editRecurringTransaction": "Edit Recurring Transaction",
+    "deleteRecurringTransaction": "Delete Recurring Transaction",
+    "deleteRecurringConfirmation": "Are you sure you want to delete this recurring transaction?",
+    "noRecurringTransactions": "No recurring transactions yet",
+    "addRecurringTransactionHint": "Save time by adding regular transactions like salary and bills",
+    "frequency": "Frequency",
+    "yearly": "Yearly",
+    "dayOfMonth": "Day of Month",
+    "dayOfWeek": "Day of Week",
+    "nextExecution": "Next Execution",
+    "active": "Active",
+    "inactive": "Inactive",
+    "optional": "Optional",
+    "monday": "Monday",
+    "tuesday": "Tuesday",
+    "wednesday": "Wednesday",
+    "thursday": "Thursday",
+    "friday": "Friday",
+    "saturday": "Saturday",
+    "sunday": "Sunday",
+    "description": "Description",
+    "descriptionHint": "e.g. Netflix subscription",
+    "selectAccount": "Select Account",
+    "selectCategory": "Select Category",
+    "pleaseEnterAmount": "Please enter amount",
+    "pleaseEnterValidAmount": "Please enter a valid amount",
+    "pleaseSelectAccount": "Please select an account",
+    "budgets": "Budgets",
+    "budget": "Budget",
+    "addBudget": "Add Budget",
+    "editBudget": "Edit Budget",
+    "deleteBudget": "Delete Budget",
+    "deleteBudgetConfirmation": "Are you sure you want to delete this budget?",
+    "noBudgets": "No budgets yet",
+    "addBudgetHint": "Create a budget to keep your expenses under control",
+    "budgetName": "Budget Name",
+    "budgetNameHint": "e.g. Monthly Food Budget",
+    "pleaseEnterBudgetName": "Please enter budget name",
+    "budgetAmount": "Budget Limit",
+    "budgetPeriod": "Budget Period",
+    "budgetStartDay": "Period Start Day",
+    "allExpenses": "All Expenses",
+    "notifyAtPercent": "Warning Percentage",
+    "notifyWhenExceeded": "Notify when exceeded",
+    "used": "used",
+    "remaining": "Remaining",
+    "exceeded": "exceeded"
 }
