3 Şubat updates: Enhanced Onboarding with animations, localization, and compiler fixes

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -416,5 +416,25 @@
     "notifyWhenExceeded": "Notify when exceeded",
     "used": "used",
     "remaining": "Remaining",
-    "exceeded": "exceeded"
+    "exceeded": "exceeded",
+    "secureData": "Your data is secure and encrypted",
+    "cloudSync": "Sync across all your devices",
+    "smartInsights": "Smart insights about your finances",
+    "discoverFeatures": "Discover Features",
+    "discoverFeaturesDesc": "Everything you need to manage your finances",
+    "budgetTracking": "Budget Tracking",
+    "budgetTrackingDesc": "Set spending limits and stay on track",
+    "recurringTransactions": "Recurring Transactions",
+    "recurringTransactionsDesc": "Automate your regular payments",
+    "selectLanguageDesc": "Choose your preferred language",
+    "selectThemeDesc": "Personalize your app experience",
+    "themeOcean": "Ocean",
+    "themeSunset": "Sunset",
+    "themeForest": "Forest",
+    "themeLavender": "Lavender",
+    "themeMidnight": "Midnight",
+    "themeRose": "Rose",
+    "darkMode": "Dark Mode",
+    "japaneseYen": "Japanese Yen",
+    "russianRuble": "Russian Ruble"
 }
