--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -413,5 +413,25 @@
     "notifyWhenExceeded": "Aşıldığında bildir",
     "used": "kullanıldı",
     "remaining": "Kalan",
-    "exceeded": "aşıldı"
+    "exceeded": "aşıldı",
+    "secureData": "Verileriniz güvenli ve şifrelenmiş",
+    "cloudSync": "Tüm cihazlarınızda senkronize edin",
+    "smartInsights": "Finanslarınız hakkında akıllı öneriler",
+    "discoverFeatures": "Özellikleri Keşfet",
+    "discoverFeaturesDesc": "Finanslarınızı yönetmek için ihtiyacınız olan her şey",
+    "budgetTracking": "Bütçe Takibi",
+    "budgetTrackingDesc": "Harcama limitleri belirle ve takip et",
+    "recurringTransactions": "Tekrarlayan İşlemler",
+    "recurringTransactionsDesc": "Düzenli ödemelerinizi otomatikleştirin",
+    "selectLanguageDesc": "Tercih ettiğiniz dili seçin",
+    "selectThemeDesc": "Uygulama deneyiminizi kişiselleştirin",
+    "themeOcean": "Okyanus",
+    "themeSunset": "Gün Batımı",
+    "themeForest": "Orman",
+    "themeLavender": "Lavanta",
+    "themeMidnight": "Gece Yarısı",
+    "themeRose": "Gül",
+    "darkMode": "Karanlık Mod",
+    "japaneseYen": "Japon Yeni",
+    "russianRuble": "Rus Rublesi"
 }
